# Spotify-DataWarehouse

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md  dashboard-builder.md  pipeline-debugger.md
.claude/rules/: code-style.md  database.md  pipeline-architecutre.md  testing.md
.claude/skills/add-analyzer/: SKILL.md
.claude/skills/add-dashboard-page/: SKILL.md
.claude/skills/refactor/: SKILL.md
.github/workflows/: ci.yml
config/: logging_config.py  settings.py
dashboard/: app.py
dashboard/components/: charts.py  charts.py.tmp.13300.1773730292138  filters.py  theme.py
dashboard/pages/: 01_overview.py  02_trending.py  03_genre_analysis.py  04_mood_profiles.py
data/: README.md
db/: schema.py
docs/: architecture.md  data_dictionary.md  spotify_api_setup.md
pipelines/analysis/: clean_transform.py  load_artists.py  load_historical.py  marketing_analysis.py  visualize.py
pipelines/ingestion/: load_to_dw.py  spotify_api.py
scripts/: run_analytics.py  run_ingestion.py  run_scheduler.py  seed_kaggle.py
src/spotify_dw/: __init__.py
src/spotify_dw/analytics/: audio_profile.py  base.py  genre_analysis.py  trending.py
src/spotify_dw/db/: __init__.py  session.py
src/spotify_dw/extractors/: base.py  kaggle_csv.py  spotify_api.py
src/spotify_dw/loaders/: base.py  postgres_loader.py
tests/: conftest.py
tests/unit/: test_analytics.py  test_extractors.py  test_loaders.py  test_models.py  test_transformers.py
(+30 files in other folders)
